Fix an issue in IE : not showing nested menus

--- a/app/assets/stylesheets/active_admin/mixins/_gradients.css.scss
+++ b/app/assets/stylesheets/active_admin/mixins/_gradients.css.scss
@@ -6,9 +6,9 @@ $secondary-gradient-stop: #dfe1e2;
   background: -webkit-gradient(linear, left top, left bottom, from($start), to($end)); 
   background: -moz-linear-gradient(-90deg, $start, $end); 
   // IE 6 & 7
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{$start}, endColorstr=#{$end});
+  // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{$start}, endColorstr=#{$end});
   // IE 8
-  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{$start}, endColorstr=#{$end});
+  // -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{$start}, endColorstr=#{$end});
 }
 
 @mixin primary-gradient { 
@@ -23,7 +23,7 @@ $secondary-gradient-stop: #dfe1e2;
 @mixin no-gradient {
   background: none;
   // IE 6 & 7
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  // filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   // IE 8
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)";
+  // -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)";
 }
